--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 MixedModels = "ff71e718-51f3-5ec2-a782-8ffcbfa3c316"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+StandardizedPredictors = "5064a6a7-f8c2-40e2-8bdc-797ec6f1ae18"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
@@ -19,6 +20,7 @@ DataFrames = "1.7.0"
 GLM = "1.9.0"
 MixedModels = "4.35.2"
 Revise = "3.8.0"
+StandardizedPredictors = "1.0.1"
 StatsModels = "0.7.4"
 Tables = "1.12.1"
 Test = "1.11.0"
