--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "EfficientModelMatrices"
+name = "FormulaCompiler"
 uuid = "72341345-62c2-4039-9674-a84f8dcc444c"
 authors = ["Eric Martin Feltham <eric.feltham@aya.yale.edu>"]
 version = "0.1.0"
