--- a/Project.toml
+++ b/Project.toml
@@ -9,13 +9,11 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-FlameGraphs = "08572546-2f56-4bcf-ba4e-bab62c3a3f89"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MixedModels = "ff71e718-51f3-5ec2-a782-8ffcbfa3c316"
-ProfileSVG = "132c30aa-f267-4189-9183-c8a63c7e05e6"
-ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StandardizedPredictors = "5064a6a7-f8c2-40e2-8bdc-797ec6f1ae18"
@@ -30,12 +28,10 @@ CSV = "0.10.15"
 CategoricalArrays = "0.10.8"
 DataFrames = "1.7.0"
 Dates = "1.11.0"
-FlameGraphs = "1.1.0"
+Documenter = "1.8"
 GLM = "1.9.0"
 LinearAlgebra = "1.11.0"
 MixedModels = "4.35.2"
-ProfileSVG = "0.2.2"
-ProfileView = "1.10.1"
 Random = "1.11.0"
 Revise = "3.8.0"
 StandardizedPredictors = "1.0.1"
