--- a/Project.toml
+++ b/Project.toml
@@ -1,41 +1,42 @@
 name = "FormulaCompiler"
 uuid = "72341345-62c2-4039-9674-a84f8dcc444c"
 authors = ["Eric Martin Feltham <eric.feltham@aya.yale.edu>"]
-version = "0.1.0"
+version = "1.0.0"
 
 [deps]
-BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
-CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MixedModels = "ff71e718-51f3-5ec2-a782-8ffcbfa3c316"
-Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StandardizedPredictors = "5064a6a7-f8c2-40e2-8bdc-797ec6f1ae18"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-BenchmarkTools = "1.6.0"
-CSV = "0.10.15"
-CategoricalArrays = "0.10.8"
-DataFrames = "1.7.0"
-Dates = "1.11.0"
-Documenter = "1.8"
-GLM = "1.9.0"
-LinearAlgebra = "1.11.0"
-MixedModels = "4.35.2"
-Random = "1.11.0"
-Revise = "3.8.0"
-StandardizedPredictors = "1.0.1"
-Statistics = "1.11.1"
-StatsModels = "0.7.4"
-Tables = "1.12.1"
-Test = "1.11.0"
+CategoricalArrays = "0.10"
+DataFrames = "1.6, 1.7"
+Dates = "1.10, 1.11"
+ForwardDiff = "0.10, 1.0"
+GLM = "1.9"
+LinearAlgebra = "1.10, 1.11"
+MixedModels = "4.35"
+StandardizedPredictors = "1.0"
+Statistics = "1.10, 1.11"
+StatsModels = "0.7"
+Tables = "1.10, 1.11, 1.12"
+julia = "1.10, 1.11"
+
+[extras]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
+[targets]
+test = ["Test", "BenchmarkTools", "CSV", "Random", "Statistics", "LinearAlgebra"]
