--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,6 +1,7 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 FormulaCompiler = "72341345-62c2-4039-9674-a84f8dcc444c"
+Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 
 [compat]
 Documenter = "1"
