--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 name = "FormulaCompiler"
 uuid = "72341345-62c2-4039-9674-a84f8dcc444c"
+license = "MIT"
 authors = ["Eric Martin Feltham <eric.feltham@aya.yale.edu>"]
 version = "1.1.3"
 
