--- a/Project.toml
+++ b/Project.toml
@@ -2,7 +2,7 @@ name = "FormulaCompiler"
 uuid = "72341345-62c2-4039-9674-a84f8dcc444c"
 license = "MIT"
 authors = ["Eric Martin Feltham <eric.feltham@aya.yale.edu>"]
-version = "1.2.0"
+version = "1.3.0"
 
 [deps]
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
@@ -21,17 +21,17 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 BenchmarkTools = "1.6.0"
 CategoricalArrays = "0.10"
 DataFrames = "1.6, 1.7"
-Dates = "1.10, 1.11"
+Dates = "1.10, 1.11, 1.12"
 ForwardDiff = "0.10, 1.0"
 GLM = "1.9"
-LinearAlgebra = "1.10, 1.11"
+LinearAlgebra = "1.10, 1.11, 1.12"
 MixedModels = "4.35"
 RDatasets = "0.7.7"
 StandardizedPredictors = "1.0"
-Statistics = "1.10, 1.11"
+Statistics = "1.10, 1.11, 1.12"
 StatsModels = "0.7"
 Tables = "1.10, 1.11, 1.12"
-julia = "1.10, 1.11"
+julia = "1.10, 1.11, 1.12"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
